# LLM-Council-IDE

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt  start.sh
backend/: config.py  main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
workspace/: blackjack.py  card.py  players.txt  something.py
